--- a/app/views/prefs/prefs-scene.html
+++ b/app/views/prefs/prefs-scene.html
@@ -33,12 +33,6 @@
 					<div class="title left">Advanced View</div>     
 				</div>
 			</div>
-			<div class='palm-row'>
-				<div class='palm-row-wrapper'>
-					<div id="HelpShortcutsButton" x-mojo-element="ToggleButton"></div>
-					<div class="title left">Help Shortcuts</div>     
-				</div>
-			</div>
 			<div class='palm-row last'>
 				<div class='palm-row-wrapper'>
 					<div id="InfoBannerButton" x-mojo-element="ToggleButton"></div>
@@ -51,4 +45,6 @@
 	<div class="palm-info-text single" x-mojo-loc=''>
 		Disabling notifications will override mode settings and disables banner completely.
 	</div>
+	
+	<div id="TriggerDelaysButton" x-mojo-element="Button"></div>
 </div>
