--- a/stylesheets/modeswitcher.css
+++ b/stylesheets/modeswitcher.css
@@ -125,3 +125,92 @@
    color: white;
 }
 
+.config .palm-group
+{
+	position: relative;
+}
+
+.config .palm-row .palm-row-wrapper
+{
+	position: relative;
+}
+
+.config .help-toggle
+{
+	position: absolute;
+	right: 11px;
+	top: 11px;
+	width: 32px;
+	height: 32px;
+	background-position: 0px 0px;
+	background-repeat: no-repeat;
+	background-image: url(../images/help-toggle.png);
+}
+
+.config .help-toggle.selected
+{
+	background-position: 0px -32px;
+}
+
+.config .palm-row .palm-row-wrapper .help-overlay
+{
+	display: none;
+	position: absolute;
+	z-index: 10000;
+	width: auto;
+	height: auto;
+	border: 20px;
+	top: 2px;
+	left: 2px;
+	right: 2px;
+	bottom: 4px;
+	-webkit-border-image: url(../images/helprow.png) 20 20 20 20 stretch stretch;
+}
+
+.config .palm-row.first .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-first.png) 20 20 20 20 stretch stretch;
+}
+
+.config .palm-row.last .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-last.png) 20 20 20 20 stretch stretch;
+	bottom: 2px;
+}
+
+.config .palm-row.single .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-single.png) 20 20 20 20 stretch stretch;
+	bottom: 3px;
+}
+
+.config .palm-row-wrapper .palm-row .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow.png) 20 20 20 20 stretch stretch;
+	bottom: 3px;
+}
+
+.config .palm-row-wrapper .palm-row .first .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-first.png) 20 20 20 20 stretch stretch;
+	bottom: 3px;
+}
+
+.config .palm-row-wrapper .palm-row .last .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-last.png) 20 20 20 20 stretch stretch;
+	bottom: 3px;
+}
+
+.config .palm-row-wrapper .palm-row .single .palm-row-wrapper .help-overlay
+{
+	-webkit-border-image: url(../images/helprow-single.png) 20 20 20 20 stretch stretch;
+	bottom: 3px;
+}
+
+.config.help .palm-row .palm-row-wrapper .help-overlay,
+.config.help .palm-group > .help-overlay
+{
+	display: block;
+}
+
