--- a/app/views/mode/mode-scene.html
+++ b/app/views/mode/mode-scene.html
@@ -91,7 +91,7 @@
 		<div class="category" id="Preferences"><center>Preferences</center></div>
 
 		<div class="palm-group">
-			<div class="palm-group-title">Behaviour</div>
+			<div class="palm-group-title">Behavior</div>
 
 			<div class="palm-list">
 				<div class='palm-row first'>
@@ -122,7 +122,7 @@
 		<div class="category"><center>Preferences</center></div>
 	
 		<div class="palm-group">
-			<div class="palm-group-title">Behaviour</div>
+			<div class="palm-group-title">Behavior</div>
 		
 			<div class="palm-list">
 				<div class='palm-row first'>
@@ -153,7 +153,7 @@
 		<div class="category"><center>Preferences</center></div>
 			
 		<div class="palm-group">
-			<div class="palm-group-title">Behaviour</div>
+			<div class="palm-group-title">Behavior</div>
 			
 			<div class="palm-list">
 				<div class='palm-row first'>
