--- a/app/views/support/support-scene.html
+++ b/app/views/support/support-scene.html
@@ -21,18 +21,12 @@
 	<div class="palm-group-title">Usage</div>
 
 	<div class="palm-list">
-		<div class='palm-row first' x-Mojo-tap-highlight="momentary">
+		<div class='palm-row single' x-Mojo-tap-highlight="momentary">
 			<div class='palm-row-wrapper'>
 				<div class="label right">WWW</div>
 				<div class="title truncating-text" id="WikiLink">Wiki</div>
 			</div>
 		</div>
-		<div class='palm-row last' x-Mojo-tap-highlight="momentary">
-			<div class='palm-row-wrapper'>
-				<div class="label right">PDF</div>
-				<div class="title truncating-text" id="ManualLink">Manual</div>
-	 		</div>
-	 	</div>
 	</div>
 </div>
 
@@ -40,7 +34,13 @@
 	<div class="palm-group-title">Support</div>
 
 	<div class="palm-list">
-		<div class='palm-row first x-Mojo-tap-highlight="momentary"'>
+		<div class='palm-row first' x-Mojo-tap-highlight="momentary">
+			<div class='palm-row-wrapper'>
+				<div class="label right">IRC</div>
+				<div class="title truncating-text" id="IRCLink">IRC</div>
+	 		</div>
+	 	</div>
+		<div class='palm-row' x-Mojo-tap-highlight="momentary">
 			<div class='palm-row-wrapper'>
 				<div class="label right">WWW</div>
 				<div class="title truncating-text" id="ForumLink">Forum</div>
