--- a/app/views/main/main-scene.html
+++ b/app/views/main/main-scene.html
@@ -14,7 +14,7 @@
 		<div class='palm-row single'>
 			<div class='palm-row-wrapper'>
 				<div id="ActivatedButton" x-mojo-element="ToggleButton"></div>
-				<div class="title left">Activated</div>     
+				<div class="title left" id="StatusText">Activated</div>     
 			</div>
 		</div>
 	</div>
