--- a/app/views/mode/mode-scene.html
+++ b/app/views/mode/mode-scene.html
@@ -140,7 +140,7 @@
 			</div>
 		</div>
 		
-		<div class="category"><center>Applications</center></div>
+		<div class="category"><center>Actions</center></div>
 
 		<div style="min-height: 8px;"></div>
 
