--- a/app/views/prefs/prefs-scene.html
+++ b/app/views/prefs/prefs-scene.html
@@ -2,7 +2,7 @@
  <div class="palm-page-header">
     <div class="header-icon"></div>
     <div class="header-text">
-		  <span x-mojo-loc=''>Preferences</span>
+		  <span x-mojo-loc=''>Extensions</span>
     </div>
   </div>
   
@@ -24,27 +24,25 @@
 	</div>
 
 	<div class="palm-group">
-		<div class="palm-group-title">User Interface</div>
+		<div class="palm-group-title">Preferences</div>
 
 		<div class="palm-list">
-			<div class='palm-row first'>
-				<div class='palm-row-wrapper'>
-					<div id="AdvancedViewButton" x-mojo-element="ToggleButton"></div>
-					<div class="title left">Advanced View</div>     
-				</div>
-			</div>
-			<div class='palm-row last'>
-				<div class='palm-row-wrapper'>
-					<div id="InfoBannerButton" x-mojo-element="ToggleButton"></div>
-					<div class="title left">Notifications</div>     
-				</div>
-			</div>
+			<div id="SettingsPrefsButton" x-mojo-element="Button"></div>
+
+			<div id="ActionsPrefsButton" x-mojo-element="Button"></div>
+
+			<div id="TriggersPrefsButton" x-mojo-element="Button"></div>
 		</div>
 	</div>
-
-	<div class="palm-info-text single" x-mojo-loc=''>
-		Disabling notifications will override mode settings and disables banner completely.
-	</div>
 	
-	<div id="TriggerDelaysButton" x-mojo-element="Button"></div>
+	<div class="palm-info-text single" x-mojo-loc=''>
+		Extension configuration is not enabled yet, its coming in Mode Switcher version 2.2.
+	</div>
 </div>
+
+
+
+
+
+
+
