--- a/app/views/mode/mode-scene.html
+++ b/app/views/mode/mode-scene.html
@@ -94,16 +94,10 @@
 			<div class="palm-group-title">Behavior</div>
 
 			<div class="palm-list">
-				<div class='palm-row first'>
+				<div class='palm-row single'>
 					<div class='palm-row-wrapper'>
 						<div class="help-overlay" id="SettingsNotifyHelp"></div>
 						<div id="NotifySelector" x-mojo-element="ListSelector"></div>
-					</div>
-				</div>
-				<div class='palm-row last'>
-					<div class='palm-row-wrapper'>
-						<div class="help-overlay" id="SettingsAlertHelp"></div>
-						<div id="AlertSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 			</div>
@@ -156,16 +150,10 @@
 			<div class="palm-group-title">Behavior</div>
 			
 			<div class="palm-list">
-				<div class='palm-row first'>
+				<div class='palm-row single'>
 			 		<div class='palm-row-wrapper'>
 						<div class="help-overlay" id="TriggersRequiredHelp"></div>
 				 		<div id="RequiredSelector" x-mojo-element="ListSelector"></div>
-			 		</div>
-				</div>
-				<div class='palm-row last'>
-			 		<div class='palm-row-wrapper'>
-						<div class="help-overlay" id="TriggersBlockHelp"></div>
-				 		<div id="BlockSelector" x-mojo-element="ListSelector"></div>
 			 		</div>
 				</div>
 			</div>
