--- a/app/views/prefs/prefs-scene.html
+++ b/app/views/prefs/prefs-scene.html
@@ -1,48 +1,63 @@
-<div id="main">
- <div class="palm-page-header">
-    <div class="header-icon"></div>
-    <div class="header-text">
-		  <span x-mojo-loc=''>Extensions</span>
-    </div>
-  </div>
-  
-	<div class="palm-group">
-		<div class="palm-group-title">Functionality</div>
+<div id="prefs" class="prefs">
+	<div class="palm-page-header multi-line">
+		<div class="palm-page-header-wrapper">
+			<div class="help-toggle" id="help-toggle" x-mojo-tap-highlight="persistent"></div>
+			<div class="icon"></div>
+			<div class="title" id="title">Extensions</div>
+		</div>
+	</div>
 
-		<div class="palm-list">
-			<div class='palm-row single'>
-				<div class='palm-row-wrapper'>
-					<div id="AdvancedSettingsButton" x-mojo-element="ToggleButton"></div>
-					<div class="title left">Advanced Features</div>
+	<div id="mainView">
+	  	<div class="palm-group">
+			<div class="palm-group-title">Functionality</div>
+
+			<div class="palm-list">
+				<div class='palm-row single'>
+					<div class='palm-row-wrapper'>
+						<div id="AdvancedSettingsButton" x-mojo-element="ToggleButton"></div>
+						<div class="title left">Advanced Features</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="palm-info-text single" x-mojo-loc=''>
-		Advanced system prefs patches need to be installed for advanced features to work!
-	</div>
+		<div class="palm-info-text single" x-mojo-loc=''>
+			Advanced system prefs patches need to be installed for advanced features to work!
+		</div>
 
-	<div class="palm-group">
-		<div class="palm-group-title">Preferences</div>
+		<div class="palm-group">
+			<div class="palm-group-title">Preferences</div>
 
-		<div class="palm-list">
-			<div id="SettingsPrefsButton" x-mojo-element="Button"></div>
+			<div class="palm-list">
+				<div id="SettingsPrefsButton" x-mojo-element="Button"></div>
 
-			<div id="ActionsPrefsButton" x-mojo-element="Button"></div>
+				<div id="ActionsPrefsButton" x-mojo-element="Button"></div>
 
-			<div id="TriggersPrefsButton" x-mojo-element="Button"></div>
+				<div id="TriggersPrefsButton" x-mojo-element="Button"></div>
+			</div>
+		</div>
+	
+		<div class="palm-info-text single" x-mojo-loc=''>
+			Actions / triggers configuration isn't enabled yet, but will be enabled in future versions.
 		</div>
 	</div>
 	
-	<div class="palm-info-text single" x-mojo-loc=''>
-		Extension configuration is not enabled yet, its coming in Mode Switcher version 2.2.
-	</div>
+	<div id="settingsView" style="display:none;">
+		<div class="palm-list">
+			<div class='palm-row single'>
+				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="SettingsForcedHelp" style="margin-left:5px;margin-right:5px;"></div>		
+
+					<div class="palm-group">
+						<div class="palm-group-title truncating-text">Forced Settings Applying</div>
+
+						<div class="palm-list">
+							<div id="SettingsList" x-mojo-element="List"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
 </div>
-
-
-
-
-
-
 
