--- a/app/views/gdm/gdm-scene.html
+++ b/app/views/gdm/gdm-scene.html
@@ -22,7 +22,7 @@
 			<div class='palm-row'>
 				<div class='palm-row-wrapper'>
 					<div id="ImportGDShared" x-mojo-element="ToggleButton"></div>
-					<div class="label left">Show shared Modes</div>
+					<div class="title">Show Shared Modes</div>
 				</div>	
 			</div>		
 			<div class='palm-row last'>
