--- a/app/views/mode/mode-scene.html
+++ b/app/views/mode/mode-scene.html
@@ -159,7 +159,7 @@
 			</div>
 		</div>
 	
-		<div class="category"><center><div  id="TriggersTitle">Activation Triggers</div></center></div>
+		<div class="category"><center>Activation Triggers</center></div>
 
 		<div style="min-height: 8px;"></div>
 
