--- a/app/views/prefs/prefs-scene.html
+++ b/app/views/prefs/prefs-scene.html
@@ -38,7 +38,7 @@
 		</div>
 	
 		<div class="palm-info-text single" x-mojo-loc=''>
-			Actions / triggers configuration isn't enabled yet, but will be enabled in future versions.
+			Extension preferences can be used to taylor behavior of all extensions for your needs.
 		</div>
 	</div>
 	
@@ -53,6 +53,24 @@
 
 						<div class="palm-list">
 							<div id="SettingsList" x-mojo-element="List"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
+
+	<div id="triggersView" style="display:none;">
+		<div class="palm-list">
+			<div class='palm-row single'>
+				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="TriggersDelaysHelp" style="margin-left:5px;margin-right:5px;"></div>		
+
+					<div class="palm-group">
+						<div class="palm-group-title truncating-text">Mode Changing Delays</div>
+
+						<div class="palm-list">
+							<div id="TriggersList" x-mojo-element="List"></div>
 						</div>
 					</div>
 				</div>
