--- a/app/views/main/main-scene.html
+++ b/app/views/main/main-scene.html
@@ -49,3 +49,7 @@
 	<div id="DefModeButton" x-mojo-element="Button"></div>
 </div>
 
+<div class="palm-scrim" id="overlay-scrim" style="display: none;">
+    <div id="waitSpinner" x-mojo-element="Spinner" />
+</div>
+
