--- a/app/views/gdm/gdm-scene.html
+++ b/app/views/gdm/gdm-scene.html
@@ -1,17 +1,19 @@
-<div id="import" style="display:none;">
-	<div class="palm-page-header">
-		<div class="header-icon modeswitcher"></div>
-		<div class="header-text">
-			<span x-mojo-loc='' id="ImportTitle1">Import Document</span>
+<div id="import" class="config" style="display:none;">
+	<div class="palm-page-header multi-line">
+		<div class="palm-page-header-wrapper">
+			<div class="help-toggle" id="help-toggle-import" x-mojo-tap-highlight="persistent"></div>
+			<div class="icon"></div>
+			<div class="title" id="ImportTitle1">Import Document</div>
 		</div>
 	</div>
-	
+
 	<div class="palm-group">
 		<div class="palm-group-title">Filter Options</div>
 		
 		<div class="palm-list">
 			<div class='palm-row first'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportMatchHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ImportGDMatch" x-mojo-element="TextField"></div>
@@ -21,24 +23,27 @@
 			</div>
 			<div class='palm-row'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportSharedHelp"></div>
 					<div id="ImportGDShared" x-mojo-element="ToggleButton"></div>
-					<div class="title">Show Shared Modes</div>
+					<div class="title">Only Show Shared</div>
 				</div>	
 			</div>		
 			<div class='palm-row last'>
 		 		<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportOrderingHelp"></div>
 					<div id="ImportGDOrdering" x-mojo-element="ListSelector"></div>
 				</div>
 			</div>
 		</div>	
 	</div>
 	
-	<div class="palm-group">
+	<div class="palm-group" id="privateDocs">
 		<div class="palm-group-title">Google Docs</div>
 		
 		<div class="palm-list">
 			<div class='palm-row first'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportUsernameHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ImportGDUsername" x-mojo-element="TextField"></div>
@@ -48,9 +53,33 @@
 			</div>	
 			<div class='palm-row last'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportPasswordHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ImportGDPassword" x-mojo-element="PasswordField"></div>
+						</div>
+					</div>
+				</div>	
+			</div>	
+		</div>	
+	</div>	
+
+	<div class="palm-group" id="publicDocs" style="display:none;">
+		<div class="palm-group-title">Google Groups</div>
+		
+		<div class="palm-list">
+			<div class='palm-row first'>
+				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportLimitHelp"></div>				
+					<div id="ImportGDLimit" x-mojo-element="ListSelector"></div>
+				</div>	
+			</div>	
+			<div class='palm-row last'>
+				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ImportManualHelp"></div>
+					<div class='textfield-group' x-mojo-focus-highlight="true">
+						<div class="title">
+							<div id="ImportGDManual" x-mojo-element="TextField"></div>
 						</div>
 					</div>
 				</div>	
@@ -62,10 +91,10 @@
 </div>
 
 <div id="import-list" style="display:none;">
-	<div class="palm-page-header">
-		<div class="header-icon modeswitcher"></div>
-		<div class="header-text">
-			<span x-mojo-loc='' id="ImportTitle2">Import Document</span>
+	<div class="palm-page-header multi-line">
+		<div class="palm-page-header-wrapper">
+			<div class="icon"></div>
+			<div class="title"  id="ImportTitle2">Import Document</div>
 		</div>
 	</div>
 	
@@ -74,11 +103,12 @@
 	</div>
 </div>
 
-<div id="export" style="display:none;">
-	<div class="palm-page-header">
-		<div class="header-icon modeswitcher"></div>
-		<div class="header-text">
-			<span x-mojo-loc='' id="ExportTitle">Export Document</span>
+<div id="export" class="config" style="display:none;">
+	<div class="palm-page-header multi-line">
+		<div class="palm-page-header-wrapper">
+			<div class="help-toggle" id="help-toggle-export" x-mojo-tap-highlight="persistent"></div>
+			<div class="icon"></div>
+			<div class="title" id="ExportTitle">Export Document</div>
 		</div>
 	</div>
 	
@@ -88,6 +118,7 @@
 		<div class="palm-list">
 			<div class='palm-row first'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ExportTitleHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ExportGDTitle" x-mojo-element="TextField"></div>
@@ -97,6 +128,7 @@
 			</div>	
 			<div class='palm-row last'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ExportDescHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ExportGDDesc" x-mojo-element="TextField"></div>
@@ -113,6 +145,7 @@
 		<div class="palm-list">
 			<div class='palm-row first'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ExportUsernameHelp"></div>				
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ExportGDUsername" x-mojo-element="TextField"></div>
@@ -122,6 +155,7 @@
 			</div>	
 			<div class='palm-row'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ExportPasswordHelp"></div>
 					<div class='textfield-group' x-mojo-focus-highlight="true">
 						<div class="title">
 							<div id="ExportGDPassword" x-mojo-element="PasswordField"></div>
@@ -131,6 +165,7 @@
 			</div>	
 			<div class='palm-row last'>
 				<div class='palm-row-wrapper'>
+					<div class="help-overlay" id="ExportShareHelp"></div>				
 					<div id="ExportGDShare" x-mojo-element="ToggleButton"></div>
 					<div class="title left">Share with MS group</div>
 				</div>	
@@ -150,3 +185,8 @@
 	<br><br><br><br><br><br><center>Loading Map...</center>
 	</div>
 </div>
+
+<div class="palm-scrim" id="overlay-scrim" style="display: none;">
+    <div id="waitSpinner" x-mojo-element="Spinner" />
+</div>
+
