--- a/app/views/gdm/gdm-scene.html
+++ b/app/views/gdm/gdm-scene.html
@@ -25,7 +25,7 @@
 				<div class='palm-row-wrapper'>
 					<div class="help-overlay" id="ImportSharedHelp"></div>
 					<div id="ImportGDShared" x-mojo-element="ToggleButton"></div>
-					<div class="title">Only Show Shared</div>
+					<div class="title">Only show shared</div>
 				</div>	
 			</div>		
 			<div class='palm-row last'>
@@ -167,7 +167,7 @@
 				<div class='palm-row-wrapper'>
 					<div class="help-overlay" id="ExportShareHelp"></div>				
 					<div id="ExportGDShare" x-mojo-element="ToggleButton"></div>
-					<div class="title left">Share with MS group</div>
+					<div class="title left">Share with group</div>
 				</div>	
 			</div>	
 		</div>	
